--- a/scripts/install
+++ b/scripts/install
@@ -61,12 +61,12 @@ ynh_script_progression --message="Finding an available port..." --time --weight=
 port=$(ynh_find_port --port=8095)
 ynh_app_setting_set --app=$app --key=port --value=$port
 
-#=================================================
-# INSTALL DEPENDENCIES
-#=================================================
-ynh_script_progression --message="Installing dependencies..." --time --weight=1
+# #=================================================
+# # INSTALL DEPENDENCIES
+# #=================================================
+# ynh_script_progression --message="Installing dependencies..." --time --weight=1
 
-ynh_install_app_dependencies $pkg_dependencies
+# ynh_install_app_dependencies $pkg_dependencies
 
 #=================================================
 # CREATE DEDICATED USER
