--- a/scripts/install
+++ b/scripts/install
@@ -107,7 +107,7 @@ ynh_add_fpm_config
 #=================================================
 ynh_script_progression --message="Adding a configuration file..." --weight=1
 
-ynh_add_config --template="../conf/perso_modele.php" --destination="$final_path/perso.php"
+ynh_add_config --template="../conf/perso_modele.php" --destination="$final_path/conf/perso.php"
 
 chmod 400 "$final_path/perso.php"
 chown $app:$app "$final_path/perso.php"
