--- a/scripts/install
+++ b/scripts/install
@@ -109,8 +109,8 @@ ynh_script_progression --message="Adding a configuration file..." --weight=1
 
 ynh_add_config --template="../conf/perso_modele.php" --destination="$final_path/conf/perso.php"
 
-chmod 400 "$final_path/perso.php"
-chown $app:$app "$final_path/perso.php"
+chmod 400 "$final_path/conf/perso.php"
+chown $app:$app "$final_path/conf/perso.php"
 
 #=================================================
 # SETUP SSOWAT
